fix vacs info overflow

--- a/public/css/components/vacs/vacs.less
+++ b/public/css/components/vacs/vacs.less
@@ -81,6 +81,9 @@
 
   .vacs-add-info-text {
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 200px;
   }
 
   .add-info-vacs-salary {
@@ -88,7 +91,7 @@
   }
 
   .add-info-vacs {
-    width: 25%;
+    // width: 25%;
   }
 
   // .add-info-vacancy-salary-block,
@@ -98,6 +101,7 @@
 
   .vacs__list__item__desc__main {
     display: flex;
+    // align-items: flex-start;
   }
 
   .vacs__list {
