--- a/public/css/components/view/__field/view__field.less
+++ b/public/css/components/view/__field/view__field.less
@@ -77,9 +77,9 @@
 }
 
 .view-company__img {
-    display: flex;
     width: 100px;
-    height: auto;
+    height: 100px;
+    object-fit: cover;
     border-radius: 20%;
 }
 
